[gd_scene load_steps=10 format=3 uid="uid://cljvvrcchbbsv"]

[ext_resource type="Script" path="res://Coin/Coin.gd" id="1_yf2gb"]
[ext_resource type="Texture2D" uid="uid://daivocvqid0pn" path="res://Art/img_for_Yuma/gold_1.png" id="2_pvr15"]
[ext_resource type="Texture2D" uid="uid://oly14qpwegik" path="res://Art/img_for_Yuma/gold_2.png" id="3_4xs5d"]
[ext_resource type="Texture2D" uid="uid://glbq3wcbpxwo" path="res://Art/img_for_Yuma/gold_3.png" id="4_2nt6o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lrp6c"]
radius = 23.3928

[sub_resource type="SpriteFrames" id="SpriteFrames_muvsr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pvr15")
}, {
"duration": 1.0,
"texture": ExtResource("3_4xs5d")
}, {
"duration": 1.0,
"texture": ExtResource("4_2nt6o")
}],
"loop": true,
"name": &"spin",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_k166n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yagei"]
resource_name = "bounce"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, -158), Vector2(1, -69)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_secth"]
_data = {
"RESET": SubResource("Animation_k166n"),
"bounce": SubResource("Animation_yagei")
}

[node name="Coin" type="Area2D"]
collision_layer = 0
script = ExtResource("1_yf2gb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.6, 0.6)
shape = SubResource("CircleShape2D_lrp6c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.328)
sprite_frames = SubResource("SpriteFrames_muvsr")
animation = &"spin"
autoplay = "spin"
frame = 1
frame_progress = 0.118237

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_secth")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="coin_collected" from="." to="." method="_on_coin_collected"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
